--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <title>Project B</title>
+    <title>Project B- 02806 F18 at DTU</title>
     <meta charset="utf-8" />
     <script src="js/d3.v4.min.js"></script>
     <script src="js/lodash.min.js"></script>
@@ -54,6 +54,7 @@
     </script>
 </head>
 <body>
+
   <div class="row" style="margin-left:20px">
     <div class="col-2"></div>
     <div class="col-8">
@@ -186,14 +187,13 @@
           <div class="col-2">
             <div class="right-skip" >
               <div class="btn-group btn-group-vertical">
-                <button class="rounded go-to-bottom btn btn-outline-primary">Bottom</button>
                 <button type="button" data-toggle="button" 
-                        class="rounded active btn-outline-primary btn borough-button"
+                        class="rounded btn-outline-primary btn"
                         id="toggleAnimations" 
-                        style="margin-top: 5px;"
                         onclick="toggleAutomateAnimations();">
                       Animate<br/>
                     on scroll</button>
+                <button id="go-to-bottom" style="margin-top: 5px;"class="rounded btn btn-outline-primary">Bottom</button>
               </div>
             </div>
           </div>
@@ -212,7 +212,7 @@
         <div class="step" >
           <h1>Animations</h1>
           <p>
-            Many of these information boxes will activate an animation in the charts. You can click to activate the animation again and you can also deactivate the automatic animation activation by clicking the button in the right pane "Animate on scroll".   
+            Many of these information boxes will can activate an animation in the charts. You can click the information button to activate it or you can activate automatic animation on scroll by clicking the button in the right pane "Animate on scroll".   
           </p>
 
         </div>
