--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       <div class="col-2"></div>
       <div class="col-8">
         
-        Noget tekst som afslutning
+      The above was our visualization showcasing traffic accidents in New York. We hope that it has been interesting and we hope you will drive safely, remaining aware of your surroundings.
 
       </div>  <!-- end of title, middle column -->
       <div class="col-2"></div>
