Explainer change, slider changes

--- a/explainer.html
+++ b/explainer.html
@@ -7,14 +7,14 @@
   <li>
 <em>What is your dataset?</em> <br/>
 
-<br/><p>Our dataset is from <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Historic/qgea-i56i">OpenNYC</a> and encompasses all recorded traffic collisions from 2014 to now in New York. <br>
+<br/><p>Our dataset is from <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Complaint-Data-Historic/qgea-i56i">OpenNYC</a> and encompasses all recorded traffic collisions from 2014 to now in New York. <br/>
 Link to direct download of files used in the visualizations are here, some mentioned later:</p>
 <div class="text-center">
-  <a href="data/boroughs.json" >Download boroughs used in the map chart (boroughs.json)</a><br>
-  <a href="data/accidentsInNewYorkReduced.csv" >Download accidents file used all around (accidentsInNewYorkReduced.csv)</a><br>
-  <a href="data/countAllUniqueContributingFactor.csv" >Download top 20 factors used in bubble chart (countAllUniqueContributingFactor.csv)</a><br>
+  <a href="data/boroughs.json" >Download boroughs used in the map chart (boroughs.json)</a><br/>
+  <a href="data/accidentsInNewYorkReduced.csv" >Download accidents file used all around (accidentsInNewYorkReduced.csv)</a><br/>
+  <a href="data/countAllUniqueContributingFactor.csv" >Download top 20 factors used in bubble chart (countAllUniqueContributingFactor.csv)</a><br/>
 </div>
-<br>
+<br/>
   </li>
   <li>
 <em>Why did you choose this/these particular dataset(s)?</em>
@@ -64,7 +64,7 @@ We decided to use a consistent visual platform as our three visualizations inter
 We use Feature Distinction by setting each borough and every feature relating to that borough to the same color. Thus the stacked bar chart has sections corresponding to data from a specific borough, the buttons allowing the user to enable or disable certain borough datasets are also color coded to the corresponding borough.
 </p>
 <p>
-Finally we use Animated Transitions to transition our bars, our dots and our line chart. When you use the slider belonging to the line chart it will transition in and out of the aggregation of the data points.</em>
+Finally we use Animated Transitions to transition our bars, our dots and our line chart. When you use the slider belonging to the line chart it will transition in and out of the aggregation of the data points.
 </p>
 
   </li>
@@ -124,7 +124,7 @@ In a real life commercial article with visualizations we would use canvas for pa
 
 <div class="text-center">
   
-<figure class="figure text-align">
+<figure class="figure">
   <img src="images/waterfall_map_paint.jpg" alt="waterfall_map_paint.jpg"/>
   <figcaption class="figure-caption">The paint execution takes up a lot of time when doing the animations.</figcaption>
 </figure>
@@ -135,14 +135,14 @@ In a real life commercial article with visualizations we would use canvas for pa
 
 <div class="text-center">
 
-<figure class="figure text-align">
+<figure class="figure">
   <img src="images/call_tree_paint.jpg" alt="call_tree_paint.jpg"/>
   <figcaption class="figure-caption">The map svg paint makes the time used on graphics a lot higher.</figcaption>
 </figure>
 
 <figure class="figure">
   <img src="images/call_tree_nopaint.jpg" alt="call_tree_nopaint.jpg"/>
-  <figcaption class="figure-caption">The map svg is display none and the graphics only takes 1,3 seconds.</figcaption>
+  <figcaption class="figure-caption">The map svg is display none and the graphics only takes 1.3 seconds.</figcaption>
 </figure>
 
 </div>
@@ -151,6 +151,125 @@ In a real life commercial article with visualizations we would use canvas for pa
     
   </li>
 </ul>
+
+<h2>Contributions</h2>
+<p>  
+All members have made an equal amount of contribution to the report. The table below indicates the main individual responsibilities of each group member:
+</p>
+<table class="tg">
+  <tr>
+    <th class="tg-v0l1"><br/>  <br/>  </th>
+    <th class="tg-oexo"></th>
+    <th class="tg-q6a5"><br/>Alexander  </th>
+    <th class="tg-q6a5"><br/>Anders  </th>
+    <th class="tg-q6a5"><br/>Silas  </th>
+  </tr>
+  <tr>
+    <td class="tg-oexo">Data story page</td>
+    <td class="tg-oexo"></td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx"></td>
+  </tr>
+  <tr>
+    <td class="tg-oexo"></td>
+    <td class="tg-oexo">Intro/ending text</td>
+    <td class="tg-xocx">x</td>
+    <td class="tg-xocx">  </td>
+    <td class="tg-xocx"></td>
+  </tr>
+  <tr>
+    <td class="tg-oexo"></td>
+    <td class="tg-oexo">Graph scroller in left pane</td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx">x</td>
+  </tr>
+  <tr>
+    <td class="tg-oexo"></td>
+    <td class="tg-oexo">Line chart</td>
+    <td class="tg-xocx">  </td>
+    <td class="tg-xocx">x</td>
+    <td class="tg-xocx"></td>
+  </tr>
+  <tr>
+    <td class="tg-oexo"></td>
+    <td class="tg-oexo">Map chart</td>
+    <td class="tg-xocx">  </td>
+    <td class="tg-xocx">  </td>
+    <td class="tg-xocx">  x</td>
+  </tr>
+  <tr>
+    <td class="tg-oexo"></td>
+    <td class="tg-oexo">Stacked Bar chart</td>
+    <td class="tg-xocx">x</td>
+    <td class="tg-xocx"> </td>
+    <td class="tg-xocx"></td>
+  </tr>
+  <tr>
+    <td class="tg-oexo">Explainer book</td>
+    <td class="tg-oexo"></td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx"></td>
+  </tr>
+  <tr>
+    <td class="tg-oexo"></td>
+    <td class="tg-oexo">Motivation</td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx">x</td>
+    <td class="tg-xocx"></td>
+  </tr>
+  <tr>
+    <td class="tg-oexo"></td>
+    <td class="tg-oexo">Basic Stats</td>
+    <td class="tg-xocx">x</td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx"></td>
+  </tr>
+  <tr>
+    <td class="tg-oexo"></td>
+    <td class="tg-oexo">Genre</td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx">x</td>
+  </tr>
+  <tr>
+    <td class="tg-oexo"></td>
+    <td class="tg-oexo">Visualizations</td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx">x</td>
+    <td class="tg-xocx"></td>
+  </tr>
+  <tr>
+    <td class="tg-oexo"></td>
+    <td class="tg-oexo">Discussion</td>
+    <td class="tg-xocx">x</td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx"></td>
+  </tr>
+  <tr>
+    <td class="tg-oexo">Other stuff</td>
+    <td class="tg-oexo"></td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx"></td>
+  </tr>
+  <tr>
+    <td class="tg-oexo"></td>
+    <td class="tg-oexo">Preprocessing of data</td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx">x</td>
+    <td class="tg-xocx"></td>
+  </tr>
+  <tr>
+    <td class="tg-oexo"></td>
+    <td class="tg-oexo">Website setup and layout</td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx"></td>
+    <td class="tg-xocx">x</td>
+  </tr>
+</table>
 
 <!-- Some additional notes: * Make sure that you use references when they’re needed and follow academic standards. -->
 </html>
