--- a/explainer.html
+++ b/explainer.html
@@ -160,9 +160,9 @@ All members have made an equal amount of contribution to the report. The table b
   <tr>
     <th class="tg-v0l1"><br/>  <br/>  </th>
     <th class="tg-oexo"></th>
-    <th class="tg-q6a5"><br/>Alexander  </th>
-    <th class="tg-q6a5"><br/>Anders  </th>
-    <th class="tg-q6a5"><br/>Silas  </th>
+    <th class="tg-hyn2"><br/>Alexander  </th>
+    <th class="tg-hyn2"><br/>Anders  </th>
+    <th class="tg-hyn2"><br/>Silas  </th>
   </tr>
   <tr>
     <td class="tg-oexo">Data story page</td>
@@ -197,7 +197,7 @@ All members have made an equal amount of contribution to the report. The table b
     <td class="tg-oexo">Map chart</td>
     <td class="tg-xocx">  </td>
     <td class="tg-xocx">  </td>
-    <td class="tg-xocx">  x</td>
+    <td class="tg-xocx">x<br/></td>
   </tr>
   <tr>
     <td class="tg-oexo"></td>
@@ -205,6 +205,13 @@ All members have made an equal amount of contribution to the report. The table b
     <td class="tg-xocx">x</td>
     <td class="tg-xocx"> </td>
     <td class="tg-xocx"></td>
+  </tr>
+  <tr>
+    <td class="tg-us36"></td>
+    <td class="tg-4a1m">Bubble chart</td>
+    <td class="tg-uys7"></td>
+    <td class="tg-uys7"></td>
+    <td class="tg-xocx">x</td>
   </tr>
   <tr>
     <td class="tg-oexo">Explainer book</td>
@@ -237,7 +244,7 @@ All members have made an equal amount of contribution to the report. The table b
   <tr>
     <td class="tg-oexo"></td>
     <td class="tg-oexo">Visualizations</td>
-    <td class="tg-xocx"></td>
+    <td class="tg-xocx">x</td>
     <td class="tg-xocx">x</td>
     <td class="tg-xocx"></td>
   </tr>
@@ -245,7 +252,7 @@ All members have made an equal amount of contribution to the report. The table b
     <td class="tg-oexo"></td>
     <td class="tg-oexo">Discussion</td>
     <td class="tg-xocx">x</td>
-    <td class="tg-xocx"></td>
+    <td class="tg-xocx">x</td>
     <td class="tg-xocx"></td>
   </tr>
   <tr>
