--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         </div>
 
         <div class="step" >
-          <h1>Airpot in Queens</h1>
+          <h1>Airport in Queens</h1>
           <p>
             The southeastern part of Queens, which seems free from accidents, is bare because of JFK International Airport.
           </p>
